<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home_fragment">

    <fragment
        android:id="@+id/home_fragment"
        android:name="com.yabu.floor.ui.home.HomeFragment"
        android:label="@string/home_tab"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/search_fragment"
        android:name="com.yabu.floor.ui.search.SearchFragment"
        android:label="@string/search_tab"
        tools:layout="@layout/fragment_search">
        <argument
            android:name="floored.ARG_QUERY"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="" />
    </fragment>

    <action android:id="@+id/action_global_search"
        app:destination="@id/search_fragment"/>

    <fragment
        android:id="@+id/markets_fragment"
        android:name="com.yabu.floor.ui.markets.MarketsFragment"
        android:label="@string/markets_tab"
        tools:layout="@layout/fragment_markets" />

    <fragment
        android:id="@+id/settings_fragment"
        android:name="com.yabu.floor.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <action android:id="@+id/action_global_settings"
        app:destination="@id/settings_fragment"/>

    <action android:id="@+id/action_global_company_detail"
        app:destination="@id/company_detail_fragment"/>

    <fragment
        android:id="@+id/company_detail_fragment"
        android:name="com.yabu.floor.ui.company.CompanyDetailFragment"
        android:label="@string/company_detail_label"
        tools:layout="@layout/fragment_company_detail">
        <argument
            android:name="floored.ARG_SYMBOL"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
</navigation>