<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.portfolio.CreatePortfolioActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables,UselessParent"
            android:background="@color/colorSurface">

            <ImageView
                android:id="@+id/company_detail_back"
                android:contentDescription="@string/img_content_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:padding="@dimen/padding_medium"
                android:layout_gravity="center_vertical"
                android:background="?selectableItemBackgroundBorderless"
                android:hapticFeedbackEnabled="true"/>

            <TextView
                android:id="@+id/company_detail_title"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/create_portfolio_title"
                android:gravity="center_vertical"
                android:padding="@dimen/padding_medium"
                style="@style/Title"/>
        </LinearLayout>

        <com.yabu.floor.ui.components.clippedimageview.ClippedImageView
            android:contentDescription="@string/portfolio_icon_content_description"
            android:layout_width="@dimen/portfolio_create_logo_dimen"
            android:layout_height="@dimen/portfolio_create_logo_dimen"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:background="@drawable/rectangle_rounded_medium"
            android:layout_margin="@dimen/padding_medium"
            tools:src="@mipmap/ic_launcher"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_medium">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:autofillHints=""
                android:hint="@string/portfolio_name_hint"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_medium">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:autofillHints=""
                android:hint="@string/portfolio_description_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:gravity="center"
            android:layout_gravity="end"
            android:layout_marginHorizontal="@dimen/padding_medium"
            android:text="@string/create_portfolio_title"
            app:icon="@drawable/ic_add"/>
    </LinearLayout>
</layout>