<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSurface"
        tools:context=".ui.account.AccountFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/account_toolbar_back"
                    android:contentDescription="@string/img_content_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_medium"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:onClick="onToolbarBack"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Title"
                    android:paddingHorizontal="@dimen/padding_medium"
                    android:text="@string/log_in_title"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/padding_massive"
                    android:layout_height="@dimen/padding_massive"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_floored"
                    android:contentDescription="@string/img_content_desc" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_big"
                    android:gravity="center"
                    style="@style/Title"
                    android:text="@string/log_in_description"/>

                <Button
                    android:id="@+id/login_google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/button_min_width"
                    style="@style/Button.OutlinedIcon"
                    android:layout_gravity="center"
                    app:iconSize="@dimen/padding_medium"
                    app:iconPadding="@dimen/padding_medium"
                    app:icon="@drawable/googleg_standard_color_18"
                    android:layout_marginTop="@dimen/padding_medium"
                    android:text="@string/continue_with_google"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>